# otus_cpp

./: .travis-deploy.sh  .travis.yml  CMakeLists.txt  Doxyfile  README.md  all_same_traits.h  allocation_block.h  allocator.h  async.cpp  block.h  block_builder.h  block_processor.h  console_mutex.h  console_observer.h  container.h  container_element.h  container_traits.h  database.h  dynamic_block.h  file_descriptor.h  file_observer.h  file_worker.h  fixed_block.h  generator.cpp  hash_factory.h  int_traits.h  ip_filter.cpp  ipaddress.h  kkmeans.cpp  main.cpp  matrix.h  matrix_iterator.h  node.h  observer.h  observers.h  options.h  process.h  processor.h  radix_tree.h  rclss.cpp  (+8 more)
01.helloworld/: .travis-deploy.sh
02-ip_filter/: .travis-deploy.sh  .travis.yml  CMakeLists.txt  split.h
03-allocator/: .travis.yml  CMakeLists.txt  allocation_block.h  allocator.h  container_iterator.h  main.cpp
03.allocator/: container.h
04.print_ip/: .travis-deploy.sh  .travis.yml  Doxyfile
04.print_ip/src/: all_same_traits.h  main.cpp  string_traits.h  tuple_traits.h
05.matrix/: .travis.yml  CMakeLists.txt  main.cpp  matrix_iterator.h
06.bulk/: .travis-deploy.sh  .travis.yml  CMakeLists.txt  block.h  console_observer.h  file_observer.h  main.cpp  notify_recivers.h  observer.h  observers.h
07.nickname/: .travis-deploy.sh  .travis.yml  radix_tree.h  tests.cpp
08.bayan/: .travis-deploy.sh  .travis.yml  CMakeLists.txt  file_descriptor.h  hash_factory.h  main.cpp  options.h
09.range/: .travis-deploy.sh  .travis.yml  CMakeLists.txt  ip_filter.cpp  ipaddress.h  processor.h  split.h
10.bulkmt/: CMakeLists.txt  block_processor.h  console_worker.h  file_worker.h  main.cpp  observer.h  worker.h
11.async/: .travis-deploy.sh  .travis.yml  CMakeLists.txt  async.cpp
12.bulk_server/: .travis-deploy.sh  CMakeLists.txt  async.cpp  block.h  block_processor.h  block_type.h  fixed_block.h  main.cpp  observer.h  server.h  terminal_block.h
13.join_server/: .travis-deploy.sh  .travis.yml  main.cpp  server.h
14.yamr/: .travis-deploy.sh  CMakeLists.txt
15.kkmeans/: .travis-deploy.sh  CMakeLists.txt  generator.cpp  kkmeans.cpp
15.kkmeans/visualisation/: Visualisation.ipynb
16.realty/: .travis-deploy.sh  CMakeLists.txt  common.h  conanfile.txt  rclst.cpp
src/: container_traits.h  int_traits.h  string_traits.h  tuple_traits.h
